FIX: prevents 2 rows when only one is needed in firefox
Firefox keeps space for scrollbars and a result adds spacing under the first row, this should get rid of this behavior.

--- a/assets/stylesheets/common/chat-composer.scss
+++ b/assets/stylesheets/common/chat-composer.scss
@@ -54,6 +54,7 @@
   }
 
   .chat-composer-input {
+    overflow-x: hidden;
     margin: 0;
     width: 100%;
     appearance: none;
